[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generator using Hunt and Kill algorithm with pathfinding"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mramidam"}
]
keywords = ["maze", "generator", "pathfinding", "bfs", "dfs"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mramidam/a_maze_ing"

[tool.setuptools.packages.find]
include = ["mazegen*"]
